[package]
name = "webauthn"
version = "0.1.2"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The webauthn crate provides Rocket handlers to implement a Relying Party supporting passwordless or two-factor authentication using security keys according to the Web Authentication specification."
readme = "README.md"
repository = "https://github.com/tiziano88/webauthn-rs"
keywords = ["webauthn", "authentication", "rocket"]

[dependencies]
rocket = "0.4"
log = "0.4"
env_logger = "0.6"
rand = "0.6"
base64 = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
serde_cbor = "0.9"
byteorder = "1.2"
serde_bytes = "0.10"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
